# tlog

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  README_ZH_CN.md
include/tlog/: tlog.h
src/: CMakeLists.txt  tlog.cpp
test/: CMakeLists.txt  main.cpp
